--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ url: #Your url here
 baseurl: /project
 
 # variables
-name: Your Site Name
-description: Your description here
+name: Tawer的小说
+description: Tawer
 google_verification: null
 
 
